Examples using weights

--- a/non-linear.ipynb
+++ b/non-linear.ipynb
@@ -105,8 +105,8 @@
     "            A[:, i - self.nparams] = talwani.gz(x, z, [diff])/(2*delta[1])\n",
     "        return A\n",
     "        \n",
-    "    def fit(self, x, z, data):\n",
-    "        self.optimize(data=data, extra=dict(x=x, z=z))\n",
+    "    def fit(self, x, z, data, weights=None):\n",
+    "        self.optimize(data=data, extra=dict(x=x, z=z), weights=weights)\n",
     "        return self      \n",
     "    \n",
     "    def fmt_estimate(self, p):\n",
@@ -142,6 +142,17 @@
     "mpl.polygon(model, fill='gray', alpha=0.5)\n",
     "mpl.polygon(inv.estimate_, style='o-r')\n",
     "ax.invert_yaxis()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.hist(inv.residuals(data, x, z), 15)"
    ]
   },
   {
