Partial first draft
Did NonLinearMisfit and started CachedMethod. Need to finish them still.

--- a/non-linear.ipynb
+++ b/non-linear.ipynb
@@ -23,6 +23,7 @@
     "from fatiando import utils, mesher\n",
     "from fatiando.vis import mpl\n",
     "from fatiando.gravmag import talwani\n",
+    "import cPickle as pickle\n",
     "# from inversion import NonLinearMisfit, Smoothness1D"
    ]
   },
@@ -106,7 +107,7 @@
     "        return A\n",
     "        \n",
     "    def fit(self, x, z, data, weights=None):\n",
-    "        self.optimize(data=data, extra=dict(x=x, z=z), weights=weights)\n",
+    "        self.optimize(data=data, x=x, z=z, weights=weights)\n",
     "        return self      \n",
     "    \n",
     "    def fmt_estimate(self, p):\n",
@@ -153,6 +154,17 @@
    "outputs": [],
    "source": [
     "plt.hist(inv.residuals(data, x, z), 15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "inv = pickle.loads(pickle.dumps(inv))"
    ]
   },
   {
