--- a/simple-usage.ipynb
+++ b/simple-usage.ipynb
@@ -21,6 +21,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from fatiando import utils\n",
+    "import cPickle as pickle\n",
     "# from inversion import LinearMisfit"
    ]
   },
@@ -71,6 +72,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def meh(*args):\n",
+    "    return args"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "meh() got an unexpected keyword argument 'x'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-24-a7ed1a12229d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmeh\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: meh() got an unexpected keyword argument 'x'"
+     ]
+    }
+   ],
+   "source": [
+    "meh(x=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": false
@@ -92,7 +128,7 @@
     "        return A\n",
     "    \n",
     "    def fit(self, x, y, weights=None):\n",
-    "        self.optimize(data=y, extra=dict(x=x), weights=weights)\n",
+    "        self.optimize(data=y, x=x, weights=weights)\n",
     "        return self\n",
     "    \n",
     "    def fmt_estimate(self, p):\n",
@@ -145,6 +181,17 @@
    "outputs": [],
    "source": [
     "plt.hist(reg.residuals(yo, x), 15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "reg = pickle.loads(pickle.dumps(reg))"
    ]
   },
   {
