Not working yet

--- a/simple-usage.ipynb
+++ b/simple-usage.ipynb
@@ -72,37 +72,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def meh(*args):\n",
-    "    return args"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "meh() got an unexpected keyword argument 'x'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-24-a7ed1a12229d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmeh\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: meh() got an unexpected keyword argument 'x'"
-     ]
+     "data": {
+      "text/plain": [
+       "(10, 20, None)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "meh(x=10)"
+    "def pred(x, y, p=None):\n",
+    "    return x, y, p\n",
+    "\n",
+    "args = dict(x=10, y=20)\n",
+    "pred(**args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def res(data, *a, **kw):\n",
+    "    return data, pred(*a, **kw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, (2, 1, None))"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res(1, **dict(x=2, y=1))"
    ]
   },
   {
@@ -118,10 +143,12 @@
     "        super().__init__(nparams=(degree + 1))\n",
     "        self.degree = degree\n",
     "        \n",
-    "    def predict(self, p, x):\n",
+    "    def predict(self, x, p=None):\n",
+    "        if p is None:\n",
+    "            p = self.p_\n",
     "        return sum(p[i]*x**i for i in range(self.nparams))\n",
     "        \n",
-    "    def jacobian(self, p, x):\n",
+    "    def jacobian(self, x, p):\n",
     "        A = np.empty((x.size, self.nparams))\n",
     "        for i in range(self.nparams):\n",
     "            A[:, i] = x**i\n",
