Sandbox prototype works on regression
Need to add regularization and test non-linear problems

--- a/example-regression.ipynb
+++ b/example-regression.ipynb
@@ -84,17 +84,7 @@
     "n = 200\n",
     "x = np.linspace(-100, 100, n)\n",
     "y = a + b*x + c*x**2 + d*x**3\n",
-    "yo = utils.contaminate(y, 0.1, percent=True, seed=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "yo = utils.contaminate(y, 0.1, percent=True, seed=0)\n",
     "plt.plot(x, yo, '.k')"
    ]
   },
@@ -108,18 +98,6 @@
    "source": [
     "reg = Regression(3)\n",
     "reg.fit(x, yo).p_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "reg.polynomial_\n",
-    "# Should print the equation"
    ]
   },
   {
